<resources>
    <string name="app_name">Sudoku</string>
    <string name="title_activity_stats">Statystyki</string>
    <string name="tab_text_1">Łatwe</string>
    <string name="tab_text_2">Średnie</string>
    <string name="tab_text_3">Trudne</string>
    <string name="difficulty">Trudność:</string>
    <string name="mistakes">Błędy:</string>
    <string name="points">Punkty:</string>
    <string name="time">Czas:</string>
    <string name="resultsGame">Podsumowanie gry:</string>
    <string name="winner">Wygrałeś!</string>
    <string name="loser">Przegrałeś!</string>
    <string name="backToHome">Zamknij</string>
    <string name="easy">Łatwa</string>
    <string name="medium">Średnia</string>
    <string name="hard">Trudna</string>
    <string name="games">Gry</string>
    <string name="startedGames">Rozpoczęte gry</string>
    <string name="winnerGames">Wygrane gry</string>
    <string name="percentGames">Współczynnik zwycięstw</string>
    <string name="pointsGames">Punkty</string>
    <string name="maxPointsGame">Najwięcej zdobytych punktów</string>
    <string name="avgPointsGame">Średnie punkty na grę</string>
    <string name="mistakesGame">Błędy</string>
    <string name="avgMistakesGame">Średnie błędy na grę</string>
    <string name="timeGame">Czas</string>
    <string name="bestTimeGame">Najlepszy czas</string>
    <string name="avgTimeGame">Średni czas</string>
    <string name="statistics">Statystyki</string>
    <string name="zero">0</string>
    <string name="home">Ekran główny</string>
    <string name="new_game">Nowa gra</string>
    <string name="back_to_game">Powrót do gry</string>
    <string name="reset_stats">Zresetuj statystyki</string>
    <string name="sudoku">Sudoku</string>
</resources>