<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsActivity"
    android:background="?attr/custom18"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Sudoku.AppBarOverlay">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="50dp"
            android:padding="@dimen/appbar_padding"
            android:text="@string/title_activity_stats"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@android:color/white"
            app:tabIndicatorHeight="3dp"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginBottom="70dp">

    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom|end"
        android:orientation="horizontal"
        android:id="@+id/te">

        <LinearLayout
            android:id="@+id/toHome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:orientation="vertical"
            android:focusable="true">

            <ImageView
                android:id="@+id/imageButton"
                style="@style/home_menu_imageview"
                android:src="@drawable/ic_home"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView"
                style="@style/home_menu_textview"
                android:text="@string/home"
                android:textColor="#1976D2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/toStats"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:orientation="vertical"
            android:focusable="true">

            <ImageView
                android:id="@+id/imageButton3"
                style="@style/home_menu_imageview"
                android:src="@drawable/ic_stats"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView6"
                style="@style/home_menu_textview"
                android:text="@string/statistics"
                android:textColor="#1976D2" />
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>