<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D4EAE9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="150dp"
            android:src="@drawable/ic_sudoku"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sudoku"
            android:textColor="#f000"
            android:fontFamily="@font/wixmadeforybold"
            android:textSize="32sp"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:id="@+id/backToGame"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_back_game"
            android:text="@string/back_to_game"
            android:textColor="@color/newWhite"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/newBlue"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView28"
                style="@style/home_backGame_text"
                android:text="@string/back_to_game"/>

            <TextView
                android:id="@+id/infoBackGame"
                style="@style/home_backGame_text"
                android:textSize="14sp"
            />
        </LinearLayout>

        <Button

            android:id="@+id/button"
            style="@style/home_button"
            android:layout_marginBottom="150dp"
            android:background="@drawable/background_btn"
            android:text="@string/new_game"
            android:textColor="@color/newBlue"
            app:backgroundTint="@color/newWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:minHeight="48dp"
                android:orientation="vertical"
                android:focusable="true">

                <ImageView
                    android:id="@+id/imageButton"
                    style="@style/home_menu_imageview"
                    android:src="@drawable/ic_home"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/home_menu_textview"
                    android:text="@string/home"

                    android:textColor="#1976D2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/stats"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:minHeight="48dp"
                android:orientation="vertical"
                android:focusable="true">

                <ImageView
                    android:id="@+id/imageButton3"
                    style="@style/home_menu_imageview"
                    android:src="@drawable/ic_stats"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/home_menu_textview"
                    android:text="@string/statistics"
                    android:textColor="#1976D2" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


